stylesheet, del, browser-sync 추가

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -4,6 +4,12 @@
 <body>
     <div class="wrap" id="home">
         Home : Main
+
+        <div class="class-something">
+            Anything
+        </div>
+
+        <a href="./sub01.html">sub page</a>
     </div>
 </body>
 </html>
