wip : script - browserify, vinly-source-stream

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -11,5 +11,7 @@
 
         <a href="./sub01.html">sub page</a>
     </div>
+
+    <script type="module" src="./scripts/common.js"></script>
 </body>
 </html>
