--- a/src/views/home.html
+++ b/src/views/home.html
@@ -7,11 +7,12 @@
 
         <div class="class-something">
             Anything
+            <img src="./images/image.png" alt="">
         </div>
 
         <a href="./sub01.html">sub page</a>
     </div>
 
-    <script type="module" src="./scripts/common.js"></script>
+    <script type="module" src="./scripts/bundle.js"></script>
 </body>
 </html>
